# uniset2-example

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac
.gear/: rules
.qtcreator/: uniset2-example.files  uniset2-example.includes
Utilities/: Makefile.am  check-configure.sh.in
Utilities/xslt/: Makefile.am  check-empty.xsl  idBADList.xsl  idList.xsl  mk-map.sh.in  msgList.xsl  nameList.xsl
conf/: Makefile.am  configure.xml  uniset-example.spec
docs/: Dox.cfg.in  Makefile.am
docs/DocPages/: read.me
docs/html/: read.me
include/: UniSetExampleConfiguration.h
lib/: Makefile.am
lib/Various/: Makefile.am  UniSetExampleConfiguration.cc
src/: Makefile.am
src/Algorithms/: Makefile.am
src/Algorithms/Controller/: Controller.cc  Controller.h  Makefile.am  controller-main.cc  controller.src.xml  edit_controller.sh  start_fg.sh
src/Algorithms/Controller/test-suite/: 01-tests.sh  configure.xml  tests.xml
src/Algorithms/Imitator/: Imitator.cc  Imitator.h  Makefile.am  imitator-main.cc  imitator.src.xml  start_fg.sh
src/Services/Administrator/: admin.sh
src/SharedMemory/: start_fg.sh
